fix spacing

--- a/components/Banner/Banner.scss
+++ b/components/Banner/Banner.scss
@@ -9,11 +9,16 @@
     }
 }
 .banner__info {
-    max-width: 75%;
+    max-width: 66.66%;
+    @media (max-width: 1024px) {
+        text-align: center;
+        max-width: unset;
+    }
 }
 .banner__cta {
     display: flex;
     flex: 1;
     align-items: center;
     justify-content: center;
+    padding-top: 2rem;
 }
