--- a/components/Footer/Footer.scss
+++ b/components/Footer/Footer.scss
@@ -8,4 +8,12 @@ footer {
         margin: 0;
         padding: 0;
     }
+
+    a {
+        color: inherit;
+
+        &:hover {
+            color: inherit;
+        }
+    }
 }
