--- a/components/Global/Global.scss
+++ b/components/Global/Global.scss
@@ -14,3 +14,20 @@
 body {
     font-family: 'Lato';
 }
+
+.heading-title {
+    font-size: 2.5rem;
+    // font-weight: lighter;
+    color: var(--green);
+    position: relative;
+    &:after {
+        position: relative;
+        display: block;
+        content: '';
+        width: 150px;
+        height: 20px;
+        background: var(--yellow);
+        transform: translateY(-100%);
+        z-index: -1;
+    }
+}
